--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -31,6 +31,11 @@
                 type="Negative"
                 press=".onDelete"/>
 
+            <Button
+                id="demo.productapp.productapp::List--Logout"
+                text="Logout"
+                press=".logoff"/>
+
         </headerContent>
 
         <content>
